--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.0",
+        "tailwindcss": "^4.1.11",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "@tailwindcss/cli": "^4.1.11"
     }
 }
